# rustystm32

./: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
src/: button.rs  channel.rs  led.rs  main.rs  time.rs
