[package]
name = "rustystm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
stm32f4 = { version = "0.15.1", features = ["stm32f407"] }

[features]
rtt = []
